--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             margin-bottom: 20px;
         }
 
-        /* Premium Download Button */
+        /* Premium Download Button with Animation */
         .download-btn {
             display: inline-block;
             padding: 20px 60px;
@@ -93,28 +93,35 @@
             border: none;
             cursor: pointer;
             margin: 30px 0;
+            /* Added Animation */
+            animation: pulseGlow 2s infinite;
+            will-change: transform, box-shadow;
+        }
+
+        /* Pulse Animation */
+        @keyframes pulseGlow {
+            0% {
+                box-shadow: 0 0 0 0 rgba(34, 197, 94, 0.7);
+                transform: scale(1);
+            }
+            70% {
+                box-shadow: 0 0 0 20px rgba(34, 197, 94, 0);
+                transform: scale(1.05);
+            }
+            100% {
+                box-shadow: 0 0 0 0 rgba(34, 197, 94, 0);
+                transform: scale(1);
+            }
         }
 
         .download-btn:hover {
-            transform: scale(1.05) translateY(-3px);
+            animation: none; /* Pause pulse on hover to let manual scale work */
+            transform: scale(1.1) translateY(-3px);
             box-shadow: 0 15px 40px rgba(34, 197, 94, 0.6);
         }
 
         .download-btn:active {
             transform: scale(0.98);
-        }
-
-        /* Shine effect on button */
-        .download-btn::after {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: rgba(255,255,255,0.2);
-            transform: rotate(45deg);
-            transition: 0.5s;
         }
 
         /* Grid for Features */
